fixed command spacing

--- a/mainWindow.css
+++ b/mainWindow.css
@@ -51,12 +51,12 @@ iframe {
 }
 
 #chatBox {
+    height: 100%;
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     padding: 10px;
     z-index: 20; 
-    opacity: 0.5;
 }
 
 #messages {
